<resources>
    <string name="app_name">Stage IT Run</string>
    <string name="unipd">Università degli Studi di Padova</string>

    <string name="action_stage_spec">Dettagli stage</string>
    <string name="action_trophy_spec">Dettagli trofeo</string>
    <string name="activity_stage">Stage</string>
    <string name="action_trophy">Trofei</string>
    <string name="action_profile">Profilo utente</string>
    <string name="action_settings">Settings</string>

    <string name="activity_title_login">Sign in</string>
    <string name="activity_register_title">Registrazione</string>
    <string name="nome_trofeo">Nome trofeo</string>
    <string name="descrizione_trofeo">Descrizione Trofeo</string>
    <string name="nome_azienda">Nome Azienda</string>
    <string name="nome_stage">Nome stage</string>
    <string name="descrizione_stage">Descrizione stage</string>
    <string name="coda">Coda</string>
    <string name="tempo_coda">00:00:00</string>
    <string name="numero_coda">000</string>
    <string name="tempo_inizio">Inizio coda</string>
    <string name="tempo_fine">Fine coda</string>
    <string name="nome_utente">Nome Cognome</string>
    <string name="posizione">0</string>
    <string name="numero_stage">0</string>

    <string name="user_profile_title">Profilo utente</string>
    <string name="user_profile_button_logout">Log out</string>
    <string name="user_profile_button_login">Log in</string>
    <string name="user_profile_button_ok">Ok</string>
    <string name="user_profile_button_cancel">Annulla</string>
    <string name="user_profile_nome">Nome utente</string>
    <string name="user_profile_email">Indirizzo email</string>
    <string name="user_profile_stage">Colloqui svolti</string>
    <string name="user_profile_trofei">Trofei conquistati</string>
    <string name="user_profile_tempo">Tempo complessivo in coda</string>

    <string name="no_data_stage">Nessuno stage presente</string>
    <string name="no_user_rank">Nessun utente in classifica</string>
    <string name="trofeo_popup_bravo">Complimenti!!</string>
    <string name="trofeo_popup">Hai conquistato il trofeo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Indirizzo email non valido</string>
    <string name="error_invalid_password">La password è troppo corta</string>
    <string name="error_incorrect_password">La password è sbagliata</string>
    <string name="error_field_required">Il campo è obbligatorio</string>

    <!-- Strings related to register -->
    <string name="action_register">Registrati</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_cognome">Cognome</string>
    <string name="prompt_password_confirm">Ripeti password</string>
    <string name="error_required_password">La password di conferma non coincide</string>
</resources>
