<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.unipd.mpezzutt.stageitrun.MainActivity">
    <item
        android:id="@+id/action_trophy"
        android:icon="@drawable/trophy"
        android:title="@string/action_trophy"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_account_circle_white_48dp"
        android:title="@string/action_profile"
        android:orderInCategory="20"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
