<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:alignmentMode="alignBounds"
        android:orientation="vertical"
        android:columnCount="4"
        android:rowCount="2">

        <TextView
            android:id="@+id/azienda"
            android:text="@string/nome_azienda"
            android:textSize="16sp"
            android:textColor="@color/textPrimaryColor"
            android:layout_column="0"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/stage"
            android:text="@string/nome_stage"
            android:textSize="12sp"
            android:layout_column="0"
            android:layout_row="1"/>

        <Space
            android:layout_column="1"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_gravity="fill"/>

        <TextView
            android:id="@+id/coda"
            android:text="@string/coda"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_column="2"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/numeroCoda"
            android:text="@string/tempo_coda"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_column="2"
            android:layout_row="1"/>

        <ImageView
            android:id="@+id/stageTick"
            android:src="@drawable/ic_clear_red_24dp"
            android:paddingLeft="8dp"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical"/>

    </GridLayout>


</LinearLayout>