<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/trofeo_popup_bravo"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/trofeo_popup"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="196dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/trophy"/>

    <TextView
        android:id="@+id/nomeTrofeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/nome_trofeo"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>